syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/MikhailRibalkov/auth/grpc/pkg/auth_v1;auth_v1";

service AuthV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum UserRole {
  UNKNOWN         = 0;
  USER_ROLE_USER  = 1;
  USER_ROLE_ADMIN = 2;
}

message User {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  UserRole role = 5; //(требуется создать enum из двух вариантов user и admin)
}

message UserInfo {
  int64 id = 1;
  string name = 2;
  string email = 3;
  UserRole role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateUser {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue password = 3;
  google.protobuf.StringValue password_confirm = 4;
  UserRole role = 5;
}

message CreateRequest {
  User user = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  UserInfo info = 1;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message DeleteRequest {
  int64 id = 1;
}